fixed footer, post spacing

--- a/_sass/_critical_font.scss
+++ b/_sass/_critical_font.scss
@@ -10,8 +10,13 @@ body {
   font-family: var(--sans-font);
   font-size: large;
 }
+
+pre {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: .25em .5em;
+}
+
 code {
   font-family: var(--mono-font);
-  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 2px;
 }
